kfreebsd-11 (11.0~svn260450-2) UNRELEASED; urgency=low

  * Additional build fixes for vt_xboxfb.

 -- Robert Millan <rmh@debian.org>  Wed, 15 Jan 2014 12:57:28 +0100

kfreebsd-11 (11.0~svn260450-1) experimental; urgency=low

  * New upstream snapshot.
    - Fixes build of vt_xboxfb.
    - vmx_ftbfs.diff: Remove (merged).

 -- Robert Millan <rmh@debian.org>  Wed, 08 Jan 2014 21:00:00 +0100

kfreebsd-11 (11.0~svn260207-2) experimental; urgency=low

  * s/xboxfb/vt_xboxfb/ to fix FTBFS on kfreebsd-i386.
  * firmware_load.diff: Loads firmware blobs from /lib/firmware/.
    Currently only radeonkmsfw is supported.  (Closes: #642468)
  * B-D on freebsd-glue >= 0.2.15 (for bmake with right permissions).

 -- Robert Millan <rmh@debian.org>  Wed, 08 Jan 2014 02:14:08 +0100

kfreebsd-11 (11.0~svn260207-1) experimental; urgency=low

  * New upstream snapshot.
    - vmx_ftbfs.diff: Fix FTBFS in VMX code.

  * Only assert linker.hints presence on kfreebsd-any.
  * Correctly setup BSD version of MAKEFLAGS to support parallel builds.
  * Switch to bmake to follow upstream.

 -- Robert Millan <rmh@debian.org>  Fri, 03 Jan 2014 13:54:51 +0100

kfreebsd-11 (11.0~svn259528-2) experimental; urgency=low

  * Drop one more round of srcdir copying.
  * Switch default console to Newcons.

 -- Robert Millan <rmh@debian.org>  Thu, 19 Dec 2013 12:20:51 +0100

kfreebsd-11 (11.0~svn259528-1) experimental; urgency=low

  * New upstream snapshot.
    - Refresh all patches.

  [ Robert Millan ]
  * Implement a watchdog to detect when upstream switches to a new Clang
    version.
  * Disable pty(4) to follow upstream.
  * Build with CTF debug information, and enable KDTRACE_HOOKS (DTrace
    hooks) and DDB_CTF (CTF support in ELF loader) for debug builds.
    (Closes: #689916)
  * Fetch source code securely (https) in get-orig-source.
  * Remove the kludges that modify srcdir in build target. Use override
    variables instead when possible. This will allow sharing the srcdir
    later.