@@ -1,6 +1,8 @@
 kfreebsd-11 (11.0~svn260450-2) UNRELEASED; urgency=low
 
   * Additional build fixes for vt_xboxfb.
+  * firmware_load.diff: Add support for: ral, iwi, wpi, wpi, ipw,
+    iwn and rsu.
 
  -- Robert Millan <rmh@debian.org>  Wed, 15 Jan 2014 12:57:28 +0100
 
